<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2014 Philippine Android Developers Community

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">DevCon Summit</string>
    <string name="hockeyapp_id">cdaa8561ba8a8a6514a14d85b41ee152</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_user">User</string>
    <string name="title_news">News</string>
    <string name="title_programs">Programs</string>
    <string name="title_attendees">Attendees</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="about_me">About Me</string>
    <string name="company_position">Company Role/Position</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="primary">(Primary)</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="describe_yourself">Describe yourself within a maximum of 500 characters</string>
    <string name="disclaimer">Disclaimer: Details will be displayed in the attendees list</string>
    <string name="three_main_tech">Three Main Technology Stack</string>
    <string name="other_profiles">Other Profiles &amp; Links</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="authenticating">Authenticating..</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="empty_email">Email and contact not yet set</string>
    <string name="empty_about">Attendee details not yet set</string>
    <string name="empty_technologies">Attendee technologies yet set</string>
    <string name="updating">Updating..</string>
    <string name="update_when_available">Network unavailable, updating profile once connection is available..</string>
    <string name="error_no_network">Network is unavailable..</string>
</resources>
