<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/gray_light_light"
            android:padding="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_user"
                android:src="@drawable/ic_launcher"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingBottom="8dp"
                android:textAllCaps="true"
                android:text="Haifa Baluyos"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Information"
            style="@style/EditProfileHeaderTextView"/>

        <EditText
            android:id="@+id/edt_company_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_position"
            style="@style/EditProfileEditTextItem"/>

        <EditText
            android:id="@+id/edt_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            style="@style/EditProfileEditTextItem"/>

        <EditText
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            style="@style/EditProfileEditTextItem"/>

        <EditText
            android:id="@+id/edt_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            style="@style/EditProfileEditTextItem"/>

        <EditText
            android:id="@+id/edt_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            style="@style/EditProfileEditTextItem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            style="@style/EditProfileHeaderTextView"/>

        <EditText
            android:id="@+id/edt_contact_number"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="left|top"
            android:hint="@string/describe_yourself"
            style="@style/EditProfileEditTextItem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_main_tech"
            style="@style/EditProfileHeaderTextView"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_tech_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter primary technology"
                style="@style/EditProfileEditTextItem"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_tech_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Technology 2"
            style="@style/EditProfileEditTextItem"/>

        <EditText
            android:id="@+id/edt_tech_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Technology 3"
            style="@style/EditProfileEditTextItem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_profiles"
            style="@style/EditProfileHeaderTextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="http://"/>

            <EditText
                android:id="@+id/edt_domain_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="yourdomainname.com"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@"/>

            <EditText
                android:id="@+id/edt_domain_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="username"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="/"/>

            <EditText
                android:id="@+id/edt_domain_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="username or facebook id"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="30dp"
            android:text="@string/disclaimer"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_launcher"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/green"
            android:text="SAVE CHANGES"/>
    </LinearLayout>
</ScrollView>